--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -704,7 +704,7 @@ table {
   /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 2px 5px; */
 }
 
-td {
+.box-shadow td {
   width: 12.5rem;
   height: 2rem;
   padding: 0.5rem;
