--- a/views/homepages/index-election-not-active.ejs
+++ b/views/homepages/index-election-not-active.ejs
@@ -36,11 +36,11 @@
 
       <div class="content-main">
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+          <img src="img/logo_bulsu.png" class="main-first-logo no-mobile" alt="BulSU Logo" />
           <div class="first-text">
             <h2 class="montserrat period">No Ongoing Elections Right Now</h2>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
+          <img src="img/logo_bulsu_ucse.png" class="main-first-logo no-mobile" alt="BulSU UCSE Logo" />
         </div>
         <div class="main-container">
           <p class="bigger-text">
@@ -48,6 +48,17 @@
             <br />
             For more information, visit the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a>
           </p>
+          <div class="content-mobile">
+            <div class="content-main-left">
+              <img src="img/logo_bulsu.png" alt="BulSU Logo" class="logo-opacity" /> <br />
+              <p class="montserrat" id="be-heard">Be Heard! Your Vote is Your Power!</p>
+            </div>
+
+            <div class="content-main-right">
+              <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
+              <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
